Modified to fix button bg color and font size on mobile

--- a/style.css
+++ b/style.css
@@ -23,40 +23,42 @@ header{
 }
 
 .btn-group{
-    bottom: 0;
-    position: fixed;
-    width: 100%;
-    overflow: hidden;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  overflow: hidden;
 }
 
-/*default color*/
-#new{
-    background-color: rgb(26, 26, 125);
+.btn_active{
+  background-color: rgb(26, 26, 125);
+}
+
+.btn_inactive{
+  background-color: #3e4a8e; 
 }
 
 .btn-group button {
-    background-color: #3e4a8e; /* Green background */
-    border: 1px solid lightskyblue; /* Green border */
-    color: white; /* White text */
-    padding: 3px 24px; /* Some padding */
-    cursor: pointer; /* Pointer/hand icon */
-    float: left; /* Float the buttons side by side */
-    font-family: cursive, 'Style Script';
-    font-size: 12px;
+  border: 1px solid lightskyblue;
+  color: white; /* White text */
+  padding: 3px 24px; /* Some padding */
+  cursor: pointer; /* Pointer/hand icon */
+  float: left; /* Float the buttons side by side */
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, 'Style Script';
+  font-size: 12px;
   }
   
-  /* Clear floats (clearfix hack) */
-  .btn-group:after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  
-  .btn-group button:not(:last-child) {
-    border-right: none; /* Prevent double borders */
-  }
-  
-  /* Add a background color on hover */
-  .btn-group button:hover {
-    background-color: rgb(26, 26, 125);
-  }
+/* Clear floats (clearfix hack) */
+.btn-group:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.btn-group button:not(:last-child) {
+  border-right: none; /* Prevent double borders */
+}
+
+/* Add a background color on hover */
+.btn-group button:hover {
+  background-color: rgb(26, 26, 125);
+}
